2011-03-07 Borut Razem <borut.razem AT gmail.com>

	* configure, configure.in, src/Makefile.in: CXXFLAGS fixes

2011-03-06 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/cmd.src/Makefile.in:
          fixed for bison, byacc and flex version 2.5.4

2011-03-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Partial fix for #3188357.

2011-03-05 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/configure, sim/ucsim/cmd.src/cmdlexcl.h,
	  sim/ucsim/cmd.src/Makefile.in, sim/ucsim/cmd.src/newcmd.cc,
	  sim/ucsim/cmd.src/cmdset.cc, sim/ucsim/cmd.src/cmdlex.l,
	  sim/ucsim/cmd.src/newcmdposix.cc, sim/ucsim/cmd.src/newcmdwin32.cc,
	  sim/ucsim/cmd.src/cmdpars.y, sim/ucsim/configure.in:
	  use bison instead of unsupported bison++
	* sim/ucsim/cmd.src/flex_lexer.h, sim/ucsim/cmd.src/cmdpars.cc,
	  sim/ucsim/cmd.src/cmdpars.h, sim/ucsim/cmd.src/FlexLexer.h,
	  sim/ucsim/cmd.src/cmdlex.cc: deleted

2011-03-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* sim/ucsim/z80.src/inst_cb.cc:
	  Fixed broken res b, a instruction.

2011-03-02 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, doc/sdccman.lyx:
	  fixed use of SDCC_LIB environment variable:
	  first search in $SDCC_LIB/<model>
	  then search in $SDCC_LIB

2011-03-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc:
	  Improved coalescing.
	* src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Minor improvements.

2011-02-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def:
	  Various minor improvements.

2011-02-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def
	  Minor peephole improvements.

2011-02-24 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: fixed bug #3191324: PIC instructions in documentation

2011-02-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/mcs51/gen.c,
	  src/z80/peeph-z80.def: