@@ -848,7 +848,7 @@ convbuiltin (iCode *const ic, eBBlock * ebp)
   symbol *bif;
   int stack;
 
-  iCode *icc = ic;
+  iCode *icc = ic, *icp = ic->prev, *ico;
   iCode *lastparam = ic;
   while (icc->op != CALL)
     {
@@ -880,7 +880,7 @@ convbuiltin (iCode *const ic, eBBlock * ebp)
   else
     return;
 
-  /* Convert parameter passings. */
+  /* Convert parameter passings from SEND to PUSH. */
   stack = 0;
   for (icc = ic; icc->op != CALL; icc = icc->next)
     {
@@ -889,8 +889,27 @@ convbuiltin (iCode *const ic, eBBlock * ebp)
       icc->parmPush = 1;
       stack += getSize (operandType (IC_LEFT (icc)));
     }
-
   icc->parmBytes = stack;
+
+  /* Reverse parameters. */
+  for (icc = ic; icc->op != CALL; icc = icc->next)
+    {
+      if(icc->next->op != CALL)
+        icc->prev = icc->next;
+      else
+        icc->prev = icp;
+    }
+  if(icc != ic)
+    {
+      if(icp)
+        icp->next = icc->prev;
+      icc->prev = ic;
+    }
+  for(; icc != icp; ico = icc, icc = icc->prev)
+    {
+      if(icc->op != CALL)
+        icc->next = ico;
+    }
 }
 
 /*-----------------------------------------------------------------*/
